feature: upload test

--- a/src/pages/create.astro
+++ b/src/pages/create.astro
@@ -1,10 +1,10 @@
 ---
 import BaseLayout from '@/layouts/Layout.astro'
-import { TableCustom } from '@/components/TableCustom'
+import { Create } from '@/components/Create'
 
 
 ---
 
 <BaseLayout title="RSS">
     
-<TableCustom client:load />
+<Create client:load />
