--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -8,3 +8,17 @@ import { TableCustom } from '@/components/TableCustom'
 <BaseLayout title="RSS">
     
 <TableCustom client:load />
+
+<script>
+    
+    import AuthService from "@/global/services/authService.ts"
+
+    async function isAuthenticated() {
+        const authenticated = await AuthService.isAuthenticated()
+        if (!authenticated) {
+            window.location.href = '/'
+        }
+      }
+
+      isAuthenticated()
+</script>
