--- a/src/pages/rss-[id].astro
+++ b/src/pages/rss-[id].astro
@@ -10,4 +10,16 @@ import { RSS } from '@/components/rss'
 <RSS idRss={idRss} client:load />
 
 
-@/components/rss
+<script>
+    
+    import AuthService from "@/global/services/authService.ts"
+
+    async function isAuthenticated() {
+        const authenticated = await AuthService.isAuthenticated()
+        if (!authenticated) {
+            window.location.href = '/'
+        }
+      }
+
+      isAuthenticated()
+</script>
